# FunnySlides

./: Cookies.hs  FunnyMain.hs  FunnySlides.cabal  FunnyTypes.hs  Main.hs  Polls.hs  Slides.hs  Tally.hs  TreeToHtml.hs  Utils.hs
