-- The name of the package.
name:                FunnySlides
version:             0.1.0.0
license:             AllRightsReserved
license-file:        LICENSE
author:              Ville Tirronen
maintainer:          ville.tirronen@jyu.fi
category:            Web
build-type:          Simple

cabal-version:       >=1.10


library
  exposed-modules: FunnyTypes, FunnyMain, Polls, Slides, Tally, Utils, Cookies, TreeToHtml
  
  build-depends:       base >=4.8
                       ,mtl >=2.2
                       ,time>=1.5
                       ,random>=1.1
                       ,containers >=0.5
                       ,bytestring >=0.10
                       ,lucid
                       ,text
                       ,lens
                       ,aeson
                       ,blaze-builder
                       ,unordered-containers
                       ,lens-aeson
                       ,snap-core,snap-server
                       ,QuickCheck
                       ,HTTP

  
  -- Directories containing source files.
  -- hs-source-dirs:      
  
  -- Base language which the package is written in.
  default-language:    Haskell2010
  
